VS: Decide project type by linker lang as fallback

Fixes: #16738